--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <!-- Required meta tags -->
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <meta name="description" content="NarhalCoding - Where kids join together and code.">
+    <meta name="author" content="NarwhalCoding">
+
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
