--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta name="description" content="NarhalCoding - Where kids join together and code.">
+    <meta name="description" content="NarwhalCoding - Where kids join together and code.">
     <meta name="author" content="NarwhalCoding">
 
     <!-- favicon -->
