--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
-    <title>NarhalCoding - Where kids join together and code.</title>
+    <title>NarwhalCoding - Where kids join together and code.</title>
   </head>
   <body>
 
