--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
+    <!-- google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+
     <!-- custom CSS -->
     <link rel="stylesheet" href="css/style.css"></script>
     
     <!-- fontawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-
+<script src="https://use.fontawesome.com/5fce43334b.js"></script>
     <title>NarwhalCoding - Where kids join together and code.</title>
   </head>
   <body>
@@ -42,18 +44,57 @@
             <div class="">
               <h1 class="display-4">Welcome to NarwhalCoding!</h1>
               <p class="lead">Where kids join together and code.</p>
-              <p><a class="btn btn-primary btn-lg" href="https://www.eventbrite.com/e/narwhalcoding-code-meet-tickets-46476323936" role="button">RSVP</a></p>
+              <p><a class="btn btn-primary btn-lg" href="https://www.eventbrite.com/e/back-to-school-code-meet-tickets-48875571149" role="button">RSVP</a></p>
             </div>
           </div>
         </div>
       </div>
     </main>
 
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="">
+            <h2>Subscribe!</h2>
+            <!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+  #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://narwhalcoding.us19.list-manage.com/subscribe/post?u=44265a28a8397e3d7284738d1&amp;id=b599051eee" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+  <p>Subscribe to our mailing list!</p>
+<div class="mc-field-group">
+  <label for="mce-EMAIL">Email  <span class="asterisk"></span>
+</label>
+  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+  <div id="mce-responses" class="clear">
+    <div class="response" id="mce-error-response" style="display:none"></div>
+    <div class="response" id="mce-success-response" style="display:none"></div>
+  </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_44265a28a8397e3d7284738d1_b599051eee" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Submit" name="Submit" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <p><a href="https://github.com/NarwhalCoding"><i class="fab fa-github"></i></a></p>
+            <p>
+              <a href="https://github.com/NarwhalCoding"><i class="fa fa-github" aria-hidden="true"></i></a></p> &nbsp;
+              <p><a href="http://eepurl.com/dDw4a1"><i class="fa fa-envelope" aria-hidden="true"></i></a></p>
             <p>NarwhalCoding 2018</p>
             <p> <a href="mailto:codingnarwhal@gmail.com">Email us</a></p>
             <p>Narwhal by Santiago Arias from the Noun Project</p>
