--- a/index.html
+++ b/index.html
@@ -51,17 +51,48 @@
       </div>
     </main>
 
-    
+    <div class="container">
+ <div class="row">
+      <div class="col-sm">
+     <h2>About</h2>
+     <p>Every third Sunday of the month, kids get together and code with a choice of scratch, python, or html.</p>
+    </div>
+    <div class="col-sm">
+     <h2>What we code</h2>
+     <ul>
+       <li>
+         Scratch
+       </li>
+       <li>
+         html
+       </li>
+       <li>
+         Python
+       </li>
+     </ul>
+    </div>
+    <div class="col-sm">
+    <h2>What to bring</h2>
+    <ul>
+      <li>
+        Laptop
+      </li>
+      <li>
+        Charger
+      </li>
+      <li>Drink/Snack</li>
+    </ul>
+    </div>
+  </div>
+    </div>
 
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <p>
-              <a href="https://github.com/NarwhalCoding"><i class="fa fa-github" aria-hidden="true"></i></a></p> &nbsp;
-            <p>NarwhalCoding 2018</p>
-            <p> <a href="mailto:codingnarwhal@gmail.com">Email us</a></p>
+            <p>NarwhalCoding 2018 &middot; <a href="mailto:codingnarwhal@gmail.com">Email us</a></p>
             <p>Narwhal by Santiago Arias from the Noun Project</p>
+            <p><a href="https://github.com/NarwhalCoding"><i class="fa fa-github" aria-hidden="true"></i></a></p>
           </div>
         </div>
       </div>
