--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
             <div class="jumbotron-inner">
               <h1 class="display-4">Welcome to NarwhalCoding!</h1>
               <p class="lead">Where kids join together and code.</p>
-              <p><a class="btn btn-primary btn-lg" href="https://www.eventbrite.com/e/narwhalcoding-code-meet-november-2018-tickets-51649691618" role="button">RSVP</a></p>
+              <!--
+              <p><a class="btn btn-primary btn-lg" href="#" role="button">RSVP</a></p>
+            -->
             </div>
           </div>
         </div>
