--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="row">
           <div class="col-sm">
          <h2>About</h2>
-         <p>Every third Sunday of the month, kids get together and code with a choice of scratch, python, or html.</p>
+         <p>Every third Sunday of the month, kids get together and code with a choice of scratch, python, html, or hour of code.</p>
         </div>
         <div class="col-sm">
          <h2>What we code</h2>
@@ -71,6 +71,9 @@
            <li>
              Python
            </li>
+           <li>
+            Hour Of Code
+          </li>
          </ul>
         </div>
         <div class="col-sm">
