--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
             <div class="jumbotron-inner">
               <h1 class="display-4">Welcome to NarwhalCoding!</h1>
               <p class="lead">Where kids join together and code.</p>
-              <!--
-              <p><a class="btn btn-primary btn-lg" href="#" role="button">RSVP</a></p>
-            -->
             </div>
           </div>
         </div>
@@ -55,38 +52,71 @@
 
     <div class="container">
       <div class="row">
-          <div class="col-sm">
-         <h2>About</h2>
-         <p>Every third Sunday of the month, kids get together and code with a choice of scratch, python, html, or hour of code.</p>
+        <div class="col-sm-6">
+          <h2>What we code</h2>
+           <ul>
+             <li>
+               Scratch
+             </li>
+             <li>
+               html
+             </li>
+             <li>
+               Python
+             </li>
+             <li>
+              Hour Of Code
+            </li>
+            <li>Tinkercad</li>
+           </ul>
         </div>
-        <div class="col-sm">
-         <h2>What we code</h2>
-         <ul>
-           <li>
-             Scratch
-           </li>
-           <li>
-             html
-           </li>
-           <li>
-             Python
-           </li>
-           <li>
-            Hour Of Code
-          </li>
-         </ul>
+        <div class="col-sm-6">
+          <h2>What to bring</h2>
+          <ul>
+            <li>
+              Laptop
+            </li>
+            <li>
+              Charger
+            </li>
+            <li>Headphones</li>
+            <li>Drink/Snack</li>
+          </ul>
+      </div>
+    </div>
+   </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <hr>
         </div>
-        <div class="col-sm">
-        <h2>What to bring</h2>
-        <ul>
-          <li>
-            Laptop
-          </li>
-          <li>
-            Charger
-          </li>
-          <li>Drink/Snack</li>
-        </ul>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <h2>Subscribe</h2>
+          <!-- Begin Mailchimp Signup Form -->
+          <form action="https://narwhalcoding.us19.list-manage.com/subscribe/post?u=44265a28a8397e3d7284738d1&amp;id=b599051eee" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div class="form-group ">
+            <label for="mce-EMAIL">Sign up:</label>
+
+        <div class="form-row">
+          <div class="col">
+            <input type="email" value="" name="EMAIL" class="form-control form-control-lg" placeholder="email address" required>&nbsp;
+          </div>
+          <div class="col">
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_44265a28a8397e3d7284738d1_b599051eee" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" class="btn btn-primary btn-lg"></div>
+              </div>
+          </div>
+        </div>
+
+          </form>
+          <!--End mc_embed_signup-->
         </div>
       </div>
     </div>
