--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <link rel="stylesheet" href="css/style.css"></script>
     
     <!-- fontawesome -->
-<script src="https://use.fontawesome.com/5fce43334b.js"></script>
-    <title>NarwhalCoding - Where kids join together and code.</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
+  <title>NarwhalCoding - Where kids join together and code.</title>
   </head>
   <body>
 
@@ -128,9 +129,12 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
+            <p>
+              <a href="https://twitter.com/NarwhalCoding"><i class="fab fa-twitter"></i></a> 
+              <a href="https://github.com/NarwhalCoding"><i class="fab fa-github"></i></a>
+            </p>
             <p>NarwhalCoding 2019 &middot; <a href="mailto:codingnarwhal@gmail.com">Email us</a></p>
             <p>Narwhal by Santiago Arias from the Noun Project</p>
-            <p><a href="https://github.com/NarwhalCoding"><i class="fa fa-github" aria-hidden="true"></i></a></p>
           </div>
         </div>
       </div>
