--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <p>
+              <a href="http://eepurl.com/dDw4a1"><i class="fas fa-envelope"></i></a> 
               <a href="https://twitter.com/NarwhalCoding"><i class="fab fa-twitter"></i></a> 
+              <a href="https://fb.me/narwhalcoding"><i class="fab fa-facebook"></i></a> 
               <a href="https://github.com/NarwhalCoding"><i class="fab fa-github"></i></a>
             </p>
             <p>NarwhalCoding 2019 &middot; <a href="mailto:codingnarwhal@gmail.com">Email us</a></p>
