--- a/index.html
+++ b/index.html
@@ -101,6 +101,32 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
+          <h2>Schedule</h2>
+          <p>Location: <a href="https://ccclib.org/locations/lafayette.html">Lafayette Library</a> - Registration required - space is limited to 20 kids each session.</p>
+          <ul>
+            <li>June 22, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184232&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
+            <li>July 20, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184233&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
+            <li>August 17, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184234&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
+            <li>August 31, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184235&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
+            <li>September 14, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184236&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
+            <li>September 28, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184237&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
+            <li>October 12, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184238&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
+          </ul>
+      </div>
+    </div>
+   </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <hr>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
           <h2>Subscribe</h2>
           <!-- Begin Mailchimp Signup Form -->
           <form action="https://narwhalcoding.us19.list-manage.com/subscribe/post?u=44265a28a8397e3d7284738d1&amp;id=b599051eee" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
