--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 
     <!-- custom CSS -->
     <link rel="stylesheet" href="css/style.css"></script>
@@ -46,7 +47,7 @@
         <div class="row">
           <div class="col-md-12 text-center">
             <div class="jumbotron-inner">
-              <h1 class="display-4">Welcome to NarwhalCoding!</h1>
+              <h1>Welcome to NarwhalCoding!</h1>
               <p class="lead">Where kids join together and code.</p>
             </div>
           </div>
@@ -56,6 +57,58 @@
 
     <div class="container">
       <div class="row">
+        <div class="col-sm-12">
+          <h2>About</h2>
+          <p>NarwhalCoding brings together kids (grades 4-8) for technology invention and creative time to develop personal coding projects. Kids code on their own, help one another when needed and demo their work at the end of each class.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <hr>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <h2>Newsletter</h2>
+          <!-- Begin Mailchimp Signup Form -->
+          <form action="https://narwhalcoding.us19.list-manage.com/subscribe/post?u=44265a28a8397e3d7284738d1&amp;id=b599051eee" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+              <div class="form-group ">
+            <label for="mce-EMAIL">Sign up:</label>
+
+        <div class="form-row">
+          <div class="col">
+            <input type="email" value="" name="EMAIL" class="form-control form-control-lg" placeholder="email address" required>&nbsp;
+          </div>
+          <div class="col">
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_44265a28a8397e3d7284738d1_b599051eee" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" class="btn btn-primary btn-lg"></div>
+              </div>
+          </div>
+        </div>
+
+          </form>
+          <!--End mc_embed_signup-->
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <hr>
+        </div>
+      </div>
+    </div>
+    
+    <div class="container">
+      <div class="row">
         <div class="col-sm-6">
           <h2>What we code</h2>
            <ul>
@@ -63,7 +116,7 @@
                Scratch
              </li>
              <li>
-               html
+               HTML
              </li>
              <li>
                Python
@@ -102,16 +155,14 @@
       <div class="row">
         <div class="col-sm-12">
           <h2>Schedule</h2>
-          <p>Location: <a href="https://ccclib.org/locations/lafayette.html">Lafayette Library</a> - Registration required - space is limited to 20 kids each session.</p>
+          <p>Location: <a href="https://ccclib.org/locations/lafayette.html">Lafayette Library</a><br> 
+            <strong>Registration required - space is limited to 20 kids each session*</strong></p>
           <ul>
-            <li>June 22, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184232&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
-            <li>July 20, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184233&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
-            <li>August 17, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184234&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
-            <li>August 31, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184235&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
-            <li>September 14, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184236&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
             <li>September 28, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184237&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
             <li>October 12, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184238&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
+            <li>More sessions to be scheduled for 2020 (<a href="http://eepurl.com/dDw4a1">subscribe to the newsletter</a> for updates)</li>
           </ul>
+          <p><em>* There is a wait list for each session, so please cancel if you are not able to attend.</em></p>
       </div>
     </div>
    </div>
@@ -127,29 +178,11 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <h2>Subscribe</h2>
-          <!-- Begin Mailchimp Signup Form -->
-          <form action="https://narwhalcoding.us19.list-manage.com/subscribe/post?u=44265a28a8397e3d7284738d1&amp;id=b599051eee" method="post" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <div class="form-group ">
-            <label for="mce-EMAIL">Sign up:</label>
-
-        <div class="form-row">
-          <div class="col">
-            <input type="email" value="" name="EMAIL" class="form-control form-control-lg" placeholder="email address" required>&nbsp;
-          </div>
-          <div class="col">
-              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_44265a28a8397e3d7284738d1_b599051eee" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" class="btn btn-primary btn-lg"></div>
-              </div>
-          </div>
+          <h2>Questions</h2>
+          <p>Email us: <a href="mailto:codingnarwhal@gmail.com">codingnarwhal@gmail.com</a></p>
         </div>
-
-          </form>
-          <!--End mc_embed_signup-->
-        </div>
-      </div>
     </div>
+   </div>
 
     <footer>
       <div class="container">
