--- a/index.html
+++ b/index.html
@@ -158,8 +158,10 @@
           <p>Location: <a href="https://ccclib.org/locations/lafayette.html">Lafayette Library</a><br> 
             <strong>Registration required - space is limited to 20 kids each session*</strong></p>
           <ul>
-            <li>September 28, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184237&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
-            <li>October 12, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184238&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
+            <li>Saturday, September 28, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184237&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
+            <li>Saturday, October 12, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184238&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/06/19&endDate=2019/10/17">RSVP</a></li>
+            <li>Saturday, October 26, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184239&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/09/15&endDate=2020/01/13">RSVP</a></li>
+            <li>Saturday, December 07, 2019 (1:00 - 3:00 p.m.) - <a href="http://ccclib.evanced.info/signup/EventDetails?EventId=184240&df=list&lib=11&nd=120&kw=NarwhalCoding&backTo=List&startDate=2019/09/15&endDate=2020/01/13">RSVP</a></li>
             <li>More sessions to be scheduled for 2020 (<a href="http://eepurl.com/dDw4a1">subscribe to the newsletter</a> for updates)</li>
           </ul>
           <p><em>* There is a wait list for each session, so please cancel if you are not able to attend.</em></p>
