--- a/news.html
+++ b/news.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 title: News
-description: NarwhalCoding news.
-excerpt: NarwhalCoding news.
+description: Ms. Karen's Place news.
+excerpt: Ms. Karen's Place news.
 ---
 {% for post in site.posts %}
 <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
